--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,6 @@
-.bgimg{
-    background-image: url("../img/mainImage.jpg");
-    background-size: 100% 100%;
-    background-attachment: fixed;
-    width: 100%;
-    height: 660px;
+.sliderimg{
+    width: 1600px;
+    height: 700px;
 }
 .headerset{
     padding-top: 250px;
